--- a/dashboard/ingress.yaml
+++ b/dashboard/ingress.yaml
@@ -2,7 +2,6 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   labels:
-    app: kubernetes-dashboard
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
   namespace: kubernetes-dashboard
@@ -10,9 +9,9 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
-    #certmanager.k8s.io/cluster-issuer: "selfsigned-cert"
-    cert-manager.io/cluster-issuer: "selfsigned-cert"
+    #cert-manager.io/cluster-issuer: "selfsigned-cert"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    cert-manager.io/issuer: selfsigned
 spec:
   tls:
   - hosts:
