--- a/registry/dockerRegistry/docker-registry.yaml
+++ b/registry/dockerRegistry/docker-registry.yaml
@@ -4,6 +4,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: registry-pvc
 spec:
+  selector:
+    matchLabels:
+      app: registry
   accessModes:
     - ReadWriteMany
   storageClassName: nfsusb
@@ -12,26 +15,35 @@ spec:
       storage: 10Gi
 
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: registry
   labels:
     app: registry
 spec:
-  containers:
-  - name: registry
-    image: registry:2
-    imagePullPolicy: Always
-    ports:
-      - containerPort: 5000
-    volumeMounts:
-      - mountPath: /var/lib/registry
-        name: registry-data
-  volumes:
-     - name: registry-data
-       persistentVolumeClaim:
-         claimName: registry-pvc
+  selector:
+    matchLabels:
+      app: registry
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: registry
+    spec:
+      containers:
+      - name: registry
+        image: registry:2
+        imagePullPolicy: Always
+        ports:
+          - containerPort: 5000
+        volumeMounts:
+          - mountPath: /var/lib/registry
+            name: registry-data
+      volumes:
+        - name: registry-data
+          persistentVolumeClaim:
+            claimName: registry-pvc
 
 ---
 kind: Service
@@ -51,14 +63,13 @@ kind: Ingress
 metadata:
   labels:
     app: registry
-    k8s-app: registry
   name: registry
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: "selfsigned-cert"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    cert-manager.io/cluster-issuer: "selfsigned"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
   tls:
   - hosts:
