--- a/registry/dockerRegistry/docker-ui.yaml
+++ b/registry/dockerRegistry/docker-ui.yaml
@@ -2,28 +2,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: registryui
+  name: dockerui
   namespace: rack01
   labels:
-    app: registryui
-    k8s-app: registryui
+    app: dockerui
 spec:
   selector:
     matchLabels:
-      app: registryui
+      app: dockerui
   replicas: 1
   template:
     metadata:
       labels:
-        app: registryui
+        app: dockerui
     spec:
       containers:
-      - name: registryui
+      - name: dockerui
         image: konradkleine/docker-registry-frontend:v2
         imagePullPolicy: IfNotPresent
         env:
           - name: ENV_DOCKER_REGISTRY_HOST
-            value: "https://registry.home.lab"
+            value: "http://registry.rack01.svc.cluster.local:5000"
           - name: ENV_DOCKER_REGISTRY_PORT
             value: "443"
 
@@ -31,14 +30,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: registryui
+  name: dockerui
   namespace: rack01
   labels:
-    app: registryui
-    k8s-app: registryui
+    app: dockerui
 spec:
   selector:
-    app: registryui
+    app: dockerui
   ports:
     - name: tcp80
       protocol: TCP
@@ -49,26 +47,25 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  #labels:
-  #  app: registryui
-  # k8s-app: registryui
-  name: registryui
+  labels:
+    app: dockerui
+  name: dockerui
   namespace: rack01
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: "selfsigned-cert"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    cert-manager.io/cluster-issuer: "selfsigned"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
   tls:
   - hosts:
     - registryui.home.lab
-    secretName: selfsigned-cert-tls
+    secretName: uiselfsigned-cert-tls
   rules:
   - host: registryui.home.lab
     http:
       paths:
       - backend:
-          serviceName: registryui
+          serviceName: dockerui
           servicePort: 8080
