--- a/registry/dockerRegistry/pvc-claim.yaml
+++ b/registry/dockerRegistry/pvc-claim.yaml
@@ -3,13 +3,14 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: registry-pvc
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "nfs-dyn"
 spec:
   # selector:
   #   matchLabels:
   #     app: registry
   accessModes:
     - ReadWriteMany
-  storageClassName: nfsusb
   resources:
     requests:
-      storage: 10Gi
+      storage: 4Gi
