--- a/dashboard/ingress.yaml
+++ b/dashboard/ingress.yaml
@@ -4,12 +4,11 @@ metadata:
   labels:
     k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
-  namespace: monitoring
+  namespace: kubernetes-dashboard
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
-    #cert-manager.io/cluster-issuer: "selfsigned-cert"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     cert-manager.io/issuer: selfsigned
 spec:
