--- a/registry/dockerRegistry/docker-ui.yaml
+++ b/registry/dockerRegistry/docker-ui.yaml
@@ -15,6 +15,8 @@ spec:
     metadata:
       labels:
         app: dockerui
+      annotations:
+        prometheus.io/scrape: 'true'
     spec:
       containers:
       - name: dockerui
@@ -35,6 +37,8 @@ metadata:
   namespace: rack01
   labels:
     app: dockerui
+  annotations:
+    prometheus.io/scrape: "true"
 spec:
   selector:
     app: dockerui
