--- a/coredns/lab-configmap.yaml
+++ b/coredns/lab-configmap.yaml
@@ -30,3 +30,5 @@ data:
     helm  IN A 10.0.0.10
     netbox  IN A 10.0.0.10
     prometheus  IN A 10.0.0.10
+    keycloack IN A 10.0.0.10
+    karma IN A 10.0.0.10
