--- a/keycloack/keycloack.yaml
+++ b/keycloack/keycloack.yaml
@@ -5,6 +5,8 @@ metadata:
   labels:
     app: keycloak
   namespace: kube-system
+  annotations:
+    prometheus.io/scrape: "true"
 spec:
   ports:
   - name: http
@@ -12,7 +14,7 @@ spec:
     targetPort: 8080
   selector:
     app: keycloak
-  type: LoadBalancer
+
 ---
 apiVersion: apps/v1
 kind: Deployment
