--- a/keycloack/ingress.yaml
+++ b/keycloack/ingress.yaml
@@ -21,5 +21,5 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: keycloak-dashboard
+          serviceName: keycloak
           servicePort: 8080
