--- a/keycloack/configs/gatekeeper.yaml
+++ b/keycloack/configs/gatekeeper.yaml
@@ -1,10 +1,10 @@
 client-id: grafana_client
-client-secret: 59565e00-9416-40d7-b032-d74e7d17ab7d
-discovery-url: https://keycloack.home.lab/auth/realms/Master
-skip-upstream-tls-verify: false
+client-secret: dba1f059-8c28-49a8-9804-f47cd2e67b3f
+discovery-url: https://keycloak.home.lab/auth/realms/master
+skip-upstream-tls-verify: true
 skip-openid-provider-tls-verify: true
 encryption-key: b8b5931f8385d300e4f3284dcc34345c
-listen: 0.0.0.0:443
+listen: 0.0.0.0:4181
 secure-cookie: false
 enable-logging: true
 enable-json-logging: true
