add KC in front of netbox - not efficient way

--- a/netbox/nginx-all.yaml
+++ b/netbox/nginx-all.yaml
@@ -15,10 +15,24 @@ spec:
         frontend: nginx
     spec:
       containers:
+      - name: gatekeeper
+        image: keycloak/keycloak-gatekeeper:7.0.0
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 3000
+          name: service
+        args:
+        - --config=/etc/secrets/gatekeeper.yaml
+        # - --redirection-url=https://netbox.home.lab
+        # - --upstream-url=http://127.0.0.1:80
+        # - --resources=uri=/*|roles=Admin
+        volumeMounts:
+          - name: gatekeeper-secrets
+            mountPath: /etc/secrets
       - name: nginx
         image: nginx:1.12-alpine
-        ports:
-        - containerPort: 80
+        #ports:
+        #- containerPort: 80
         command: ["nginx"]
         args: ["-c", "/etc/netbox-nginx/nginx.conf","-g", "daemon off;"] 
         volumeMounts:
@@ -34,6 +48,9 @@ spec:
       - name: netbox-nginx-config
         configMap:
           name: nginx-conf
+      - name: gatekeeper-secrets
+        secret:
+          secretName: gatekeeper
        
 ---
 apiVersion: v1
@@ -47,7 +64,7 @@ spec:
   ports:
   - name: "80"
     port: 80
-    targetPort: 80
+    targetPort: 3000
   selector:
     frontend: nginx
 
