--- a/netbox/kc/gatekeeper.yaml
+++ b/netbox/kc/gatekeeper.yaml
@@ -1,10 +1,10 @@
-client-id: grafana_client
-client-secret: dba1f059-8c28-49a8-9804-f47cd2e67b3f
+client-id: services-client
+client-secret: 331a325c-ab14-4bc6-8109-3d6e9934abfc
 discovery-url: https://keycloak.home.lab/auth/realms/master
 skip-upstream-tls-verify: true
 skip-openid-provider-tls-verify: true
-encryption-key: b8b5931f8385d300e4f3284dcc34345c
-listen: 0.0.0.0:4181
+encryption-key: b8b5931f8395d300e4f3284dcc34345c
+listen: 0.0.0.0:3000
 secure-cookie: false
 enable-logging: true
 enable-json-logging: true
@@ -13,6 +13,9 @@ enable-refresh-tokens: true
 enable-session-cookies: true
 debug: true
 ingress.enabled: true
+redirection_url: http://nginx.kube-system.svc.cluster.local
+upstream_url: http://127.0.0.1:80/
 resources:
-  - uri: /favicon
-    white-listed: true
+  - uri: /*
+groups:
+  - Admin
