--- a/dashboard/ingress.yaml
+++ b/dashboard/ingress.yaml
@@ -11,6 +11,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     cert-manager.io/issuer: selfsigned
+    forecastle.stakater.com/expose: "true"
 spec:
   tls:
   - hosts:
