--- a/netbox/ingress.yaml
+++ b/netbox/ingress.yaml
@@ -8,9 +8,9 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
-    #cert-manager.io/cluster-issuer: "selfsigned-cert"
+    cert-manager.io/cluster-issuer: "selfsigned"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-    cert-manager.io/issuer: selfsigned
+    forecastle.stakater.com/expose: "true"
 spec:
   tls:
   - hosts:
