--- a/coredns/lab-configmap.yaml
+++ b/coredns/lab-configmap.yaml
@@ -32,3 +32,5 @@ data:
     prometheus  IN A 10.0.0.10
     keycloack IN A 10.0.0.10
     karma IN A 10.0.0.10
+    coreharbor IN A 10.0.0.10
+    apps IN A 10.0.0.10
