--- a/keycloack/kcvalues.yml
+++ b/keycloack/kcvalues.yml
@@ -310,10 +310,10 @@ keycloak:
   ## Persistence configuration
   persistence:
     # If true, the Postgres chart is deployed
-    deployPostgres: false
+    deployPostgres: true
 
     # The database vendor. Can be either "postgres", "mysql", "mariadb", or "h2"
-    dbVendor: h2
+    dbVendor: postgres
 
     ## The following values only apply if "deployPostgres" is set to "false"
     dbName: keycloak
@@ -355,7 +355,9 @@ postgresql:
   persistence:
     ## Enable PostgreSQL persistence using Persistent Volume Claims.
     ##
-    enabled: false
+    enabled: true
+    mountPath: /var/lib/postgresql/data
+    storageClass: "nfs-dyn"
 
 test:
   enabled: true
