--- a/netbox/ingress.yaml
+++ b/netbox/ingress.yaml
@@ -12,8 +12,8 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     forecastle.stakater.com/expose: "true"
     forecastle.stakater.com/instance: forecastle
-    forecastle.stakater.com/group: "Monitoring"
-    forecastle.stakater.com/icon: "https://netbox.home.lab/static/img/netbox_logo.svg"
+    forecastle.stakater.com/group: "Admin"
+    forecastle.stakater.com/icon: "https://netbox.readthedocs.io/en/stable/netbox_logo.svg"
 spec:
   tls:
   - hosts:
