--- a/certmgr/issuer.yaml
+++ b/certmgr/issuer.yaml
@@ -1,12 +1,14 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: selfsigned
 spec:
-  selfSigned: {}
+  ca:
+    secretName: ca-key-pair
+  # selfSigned: {}
 
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: selfsigned-cert
