--- a/metallb/patch-metallb-config.yml
+++ b/metallb/patch-metallb-config.yml
@@ -1,10 +1,5 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  namespace: kube-system
-  name: metallb-config
 data:
-  metallb-config: |
+  config: |
     address-pools:
     - name: default
       protocol: layer2
