--- a/netbox/ingress.yaml
+++ b/netbox/ingress.yaml
@@ -24,5 +24,5 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: nginx
+          serviceName: netbox-nginx
           servicePort: 80
